# tf2crossplane

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  commitizen-check.yml  create-release.yml  test.yml
examples/s3-computed-provider/: README.md  xr-s3-computed-provider.yaml
examples/s3-computed-provider/infra/: composition.yaml  xrd.yaml
examples/stackec2iams3/: README.md  xr-stackec2iams3-existingid.yaml  xr-stackec2iams3.yaml
examples/stackec2iams3/infra/ec2/: composition.yaml  xrd.yaml
examples/stackec2iams3/infra/iam/: xrd.yaml
examples/stackec2iams3/stack/: composition.yaml  stackec2iams3.stack.yaml  xrd.yaml
examples/stackiams3/: README.md  xr-stackiams3.yaml
examples/stackiams3/infra/iam/: composition.yaml  xrd.yaml
examples/stackiams3/infra/s3/: composition.yaml  xrd.yaml
examples/stackiams3/stack/: composition.yaml  stackiams3.stack.yaml  xrd.yaml
examples/stackvm/: README.md  xr-stackvm.yaml
examples/stackvm/infra/ec2/: composition.yaml  xrd.yaml
examples/stackvm/infra/kms/: composition.yaml  xrd.yaml
examples/stackvm/infra/security-group/: composition.yaml  xrd.yaml
examples/stackvm/stack/: composition.yaml  stackvm.stack.yaml  xrd.yaml
tests/: conftest.py  test_composition.py  test_parser.py  test_xrd.py
tests/infra/: test_composition.py  test_parser.py  test_xrd.py
tests/stack/: conftest.py  test_command.py  test_composition.py  test_reader.py  test_xrd.py
tf2crossplane/: composition.py  logger.py  main.py  parser.py  settings.py  xrd.py
tf2crossplane/infra/: composition.py  parser.py  xrd.py
tf2crossplane/stack/: command.py  composition.py  reader.py  xrd.py
